--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Resume a Personal Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
 <!--mobile apps-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -50,37 +44,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-8 header-right">
 					<h2>Hello</h2>
-					<h1>I'm Christopher Doe</h1>
-					<h6>Web Designer and Developer</h6>
+					<h1>I'm Chun Zhou</h1>
+					<h6>Data Enthusiast</h6>
 					<ul class="address">
 						<li>
 							<ul class="address-text">
-								<li><b>D.O.B</b></li>
-								<li>23-06-1980</li>
-							</ul>
-						</li>
-						<li>
-							<ul class="address-text">
 								<li><b>PHONE </b></li>
-								<li>+00 111 222 3333</li>
-							</ul>
-						</li>
-						<li>
-							<ul class="address-text">
-								<li><b>ADDRESS </b></li>
-								<li>756 global Place, North Sydney, Canada.</li>
+								<li>+1 412 877 2086</li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
 								<li><b>E-MAIL </b></li>
-								<li><a href="mailto:example@mail.com"> mail@example.com</a></li>
-							</ul>
-						</li>
-						<li>
-							<ul class="address-text">
-								<li><b>WEBSITE </b></li>
-								<li><a href="http://w3layouts.com">www.myresume.com</a></li>
+								<li><a href="mailto:czhou0223@gmail.com"> czhou0223@gmail.com</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -120,18 +96,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<h3 class="title"> About Me</h3>
 			<div class="col-md-8 about-left">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque. Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat tincidunt at vel nibh. Duis ut turpis mi. Duis nec scelerisque urna, sit amet varius arcu. Aliquam aliquet sapien quis mauris semper suscipit. Maecenas pharetra dapibus posuere. Praesent odio sem, varius quis dolor vel, maximus dapibus mi. Pellentesque mattis mauris neque. Nam aliquam turpis ante, at cursus massa ullamcorper ut. Proin id diam id nisi sagittis pellentesque sed sit amet eros.  
-				In porttitor tempus nulla, a porta purus commodo sed. Praesent hendrerit nisi nunc, ut porttitor justo pellentesque et ac gravida sem mattis. Donec ornare justo nec</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat</p>
+				<p>I'm Chun Zhou, born and raised in Jiangsu, China. I am currently a graduate student in the Information Systems Management Program at Carnegie Mellon University.(ranked the 1st in the United States) </p>
+				<p>I have passion in discovering business insights from large datasets and integrating results into making decisions. I am always learning new skills in data analytics from CMU and online data courses. I worked at a startup called Gridwise in Pittsburgh under Alphalab as a Data Science Intern.</p>
+				<p>I am graduating in December 2016, and am proactively looking for a Data Analyst / Data Scientist FT position.</p>
 			</div>
 			<div class="col-md-4 about-right">
 				<ul>
 					<h5>Awards</h5>
-					<li><span class="glyphicon glyphicon-menu-right"></span> Lorem ipsum dolor sit amet cingelit</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> Curabitur id metus rutrum convallis</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> Morbi dictum velit vitae porttitor</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> Fusce at metus id justo ullamcorper</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> Aliquam ac nisl id justo malesuada </li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> Dean's Honor List</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> UMAC Outstanding Teamleader</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> UMAC Honors Program</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> University of Michigan Full Scholarship Exchange Program</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> Runner-up National Challenge Cup Competition </li>
 				</ul>
 				<div class="clearfix"> </div>
 			</div>
@@ -145,41 +121,41 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h3 class="title">Work Experience</h3>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
-					<h4>2014 - 2016 </h4>
+					<h4>2016.6 - 2016.8 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Company Name</h5>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern | Gridwise</h5>
+					<p>Cleaned and preprocessed 10 million+ Uber and Taxi data based in Pittsburgh and NYC, wrote SQL queries in postreSQL in retrieving data from the cloud (AWS) and created a local database.</p><p>Built predictive models from selected features (time, location, events etc.) and generated scores from several classification and regression models: Linear, Ridge & Lasso Regression, SVM, Neural Networks, Decision Trees. </p> <p>Did cross-validation from training & testing datasets and used clustering to visualize heat map for events in R & Tableau. </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
-					<h4>2013 - 2014 </h4>
+					<h4>2014.9 - 2015.6 </h4>
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
-					<h5> Company Name <span class="glyphicon glyphicon-briefcase"> </span></h5>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+					<h5> Data Analyst Intern | Heart In Diamond <span class="glyphicon glyphicon-briefcase"> </span></h5>
+					<p>Conducted data collection, cleaning, mapping and visualization for 30+ consumers in Jiangsu & Zhejiang.</p><p>Performed market research of memorial-diamond industry in China and built predictive models in R to analyze and predict the growth of potential consumers in different regions of China.</p><p>Assisted in CRM, SEO, marketing and logistics in optimizing costs & benefits.  </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
-					<h4>2012 - 2013 </h4>
+					<h4>2014.5 - 2014.8 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Company Name</h5>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Marketing Analyst Intern | Liebherr Group</h5>
+					<p>Collected Clients’ financial accounts and company employees’ expense reports over 10 years.</p><p>Negotiated in after-sales product promotion strategies from customer data to predict future trend from logistic regression models and significance level analysis. </p><p>Drafted marketing plans and presented to the managers with the analysis report </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
-					<h4>2010 - 2012 </h4>
+					<h4>2013.5 - 2013.8 </h4>
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
-					<h5> Company Name <span class="glyphicon glyphicon-briefcase"></span> </h5>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+					<h5> Business Analyst Intern | China Merchants Bank <span class="glyphicon glyphicon-briefcase"></span> </h5>
+					<p>Made proposals in the Merchants credit card promotion in small and median sized companies and merchants in the city.</p><p>Assisted with the launch of the new Volunteer credit cards campaign, made promotion strategies and held promotion events among the China College Entrepreneurship Group and city-based Volunteer Association. </p><p>Gathered data from CMB mobile app in conducting user experience analysis from the #clicks of features, daily visits time periods, etc. to generate graphs in Excel and reported in PPT to managers. </p><p>Conducted channel promotions in sending out updates in apps and gathered feedback.  </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -192,31 +168,64 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h3 class="title">Education</h3>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
-					<h4>Master Degree - 2010</h4>
+					<h4>Master Degree - 2016
+					    <br>Master in Information Systems Management</h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-education"> </span> University Name</h5>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+					<h5><span class="glyphicon glyphicon-education"> </span> Carnegie Mellon University</h5>
+					<p>Coursework:</p>
+					<p>Machine Learning</p>
+					<p>Search Engines</p>
+					<p>Distributed Systems</p>
+					<p>Java Programming</p>
+					<p>Web Application Development</p>
+					<p>Database Management</p>
+					<p>NoSQL Database Management</p>
+					<p>Exloring & Visualizing Data</p>
+					<p>Business Intelligence & Data Mining</p>
+					<p>Data Warehousing</p>
+					<p>Object Oriented Analysis & Design</p>
+					<p>Linux & Open Source</p>
+					<p>Managing Disruptive Technologies</p>
+					<p>Digital Transformation</p>
+					<p>Decision Making Under Uncertainty</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
-					<h4>Diploma in Design - 2010</h4>
+					<h4>Bachelor Degree - 2015
+						<br>Bachelor of Science in Financial Engineering<br>Graduated with Honors</h4>
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
-					<h5> University Name <span class="glyphicon glyphicon-education"></span></h5>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+					<h5> University of Macau <span class="glyphicon glyphicon-education"></span></h5>
+					<p>Coursework:</p>
+					<p>Programming in C++</p>
+					<p>Operations Research</p>
+					<p>Advanced Financial Mathematics</p>
+					<p>Financial Risk Management</p>
+					<p>Exotic Options & Structured Products</p>
+					<p>Derivative Securities</p>
+					<p>Applied Statistics</p>
+					<p>Applied Calculus</p>
+					<p>Statistics & Data Analysis</p>
+					<p>Econometrics </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
-					<h4>Web Design - 2008</h4>
+					<h4>Exchange Program- 2014</h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-education"> </span> University Name</h5>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+					<h5><span class="glyphicon glyphicon-education"> </span> University of Michigan</h5>
+					<p>Coursework: </p>
+					<p>Calculus III</p>
+					<p>Capital Markets & Investment Strategies </p>
+					<p>Fixed Income Securities </p>
+					<p>Quant & Portfolio Management </p>
+					<p>Financial Trading </p>
+					<p>International Economics </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -229,22 +238,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h3 class="title">Skills</h3>
 			<div class="skills-info">
 				<div class="col-md-6 bar-grids">
-					<h6>WEB DESIGN  <span> 80% </span></h6>
+					<h6>Java  <span> 80% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
 					</div>
-					<h6>UI DESIGN & DEVELOPER <span> 70% </span></h6>
+					<h6>SQL <span> 70% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 70%">
 						</div>
 					</div>
-					<h6>HTML/CSS<span>90% </span></h6>
+					<h6>R<span>90% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 90%">
 						</div>
 					</div>
-					<h6>PHOTOSHOP <span> 75% </span></h6>
+					<h6>Python <span> 75% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 75%">
 						</div>
@@ -535,45 +544,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!--//portfolio-->
-	<!--contact -->
-	<div class="welcome contact" id="contact">
-		<div class="container">
-			<h3 class="title">Contact Us</h3>
-			<div class="contact-row">
-				<div class="col-md-6 contact-left">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d250261.21285550427!2d-60.42919264432581!3d46.13039392716506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b67ef033cc4082f%3A0xbf0517bb7d9ecd34!2sNorth+Sydney%2C+NS%2C+Canada!5e0!3m2!1sen!2sin!4v1460613320469"></iframe>
-				</div>
-				<div class="col-md-6 contact-right">
-					<div class="address-left">
-						<p>756 global Place, North Sydney,<br> FA-2305,Canada </p>
-					</div>
-					<div class="address-right">
-						<p>Call us :  +00 111 222 3333</p>
-						<p>E-mail : <a href="mailto:info@example.com">mail@example.com</a></p>
-					</div>
-					<div class="clearfix"></div>
-					<div class="contact-form">
-						<form action="#" method="post">
-							<input type="text" name="Name" placeholder="Name" required="">
-							<input class="email" name="Email" type="text" placeholder="Email" required="">
-							<input class="phone" name="phone" type="text" placeholder="Phone" required="">
-							<textarea name="Message" placeholder="Message" required=""></textarea>
-							<input type="submit" value="SUBMIT" >
-						</form>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div>
-	<!--//contact -->
-	<!--footer-->
-	<div class="footer">
-		<div class="container">
-			<p>© 2016 My Resume. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-		</div>
-	</div>
-	<!--//footer-->
 	<!--smooth-scrolling-of-move-up-->
 	<script type="text/javascript">
 		$(document).ready(function() {
