--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 				<div class="col-md-8 header-right">
 					<h2>Hello</h2>
-					<h1>I'm Chun Zhou</h1>
+					<h1>I'm Chun Zhou (Zoey)</h1>
 					<h6>Data Enthusiast</h6>
 					<ul class="address">
 						<li>
@@ -243,7 +243,7 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
 					</div>
-					<h6>SQL <span> 70% </span></h6>
+					<h6>SQL <span> 85% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 70%">
 						</div>
@@ -253,19 +253,19 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 90%">
 						</div>
 					</div>
-					<h6>Python <span> 75% </span></h6>
+					<h6>Python <span> 85% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 75%">
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 bar-grids">
-					<h6>PROJECT MANAGEMENT <span> 85% </span></h6>
+					<h6>Data Analysis <span> 85% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
-					<h6>SOCIAL MEDIA MARKETING<span> 95% </span></h6>
+					<h6>Data Visualization<span> 90% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 95%">
 						</div>
