--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 				<div class="col-md-8 header-right">
 					<h2>Hello</h2>
-					<h1>I'm Chun Zhou (Zoey)</h1>
+					<h1>I'm Chun Zhou </h1>
 					<h6>Data Enthusiast</h6>
 					<ul class="address">
 						<li>
@@ -107,7 +107,7 @@
 					<li><span class="glyphicon glyphicon-menu-right"></span> UMAC Outstanding Teamleader</li>
 					<li><span class="glyphicon glyphicon-menu-right"></span> UMAC Honors Program</li>
 					<li><span class="glyphicon glyphicon-menu-right"></span> University of Michigan Full Scholarship Exchange Program</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> Runner-up National Challenge Cup Competition </li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> National Challenge Cup Competition Runner Up</li>
 				</ul>
 				<div class="clearfix"> </div>
 			</div>
@@ -124,8 +124,8 @@
 					<h4>2016.6 - 2016.8 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern | Gridwise</h5>
-					<p>Cleaned and preprocessed 10 million+ Uber and Taxi data based in Pittsburgh and NYC, wrote SQL queries in postreSQL in retrieving data from the cloud (AWS) and created a local database.</p><p>Built predictive models from selected features (time, location, events etc.) and generated scores from several classification and regression models: Linear, Ridge & Lasso Regression, SVM, Neural Networks, Decision Trees. </p> <p>Did cross-validation from training & testing datasets and used clustering to visualize heat map for events in R & Tableau. </p>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern <br> Gridwise</h5>
+					<p>Cleaned and preprocessed 10 million+ Uber and Taxi data based in Pittsburgh and NYC, wrote SQL queries in postreSQL in retrieving data from the cloud (AWS) and created a local database. Built predictive models from selected features (time, location, events etc.) and generated scores from several classification and regression models: Linear, Ridge & Lasso Regression, SVM, Neural Networks, Decision Trees, Random Forest. Did cross-validation from training & testing datasets and used clustering to visualize heat map for events in R & Tableau. </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
