--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="col-md-8 header-right">
 					<h2>Hello</h2>
 					<h1>I'm Chun Zhou </h1>
-					<h6>Data Enthusiast</h6>
+					<h6>Data Enthusiast / Coder / Analyst</h6>
 					<ul class="address">
 						<li>
 							<ul class="address-text">
@@ -57,6 +57,12 @@
 							<ul class="address-text">
 								<li><b>E-MAIL </b></li>
 								<li><a href="mailto:czhou0223@gmail.com"> czhou0223@gmail.com</a></li>
+							</ul>
+						</li>
+						<li>
+							<ul class="address-text">
+								<li><b>Basic </b></li>
+								<li>Grad @ CMU</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -124,7 +130,7 @@
 					<h4>2016.6 - 2016.8 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern <br> Gridwise</h5>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern  | Gridwise</h5>
 					<p>Cleaned and preprocessed 10 million+ Uber and Taxi data based in Pittsburgh and NYC, wrote SQL queries in postreSQL in retrieving data from the cloud (AWS) and created a local database. Built predictive models from selected features (time, location, events etc.) and generated scores from several classification and regression models: Linear, Ridge & Lasso Regression, SVM, Neural Networks, Decision Trees, Random Forest. Did cross-validation from training & testing datasets and used clustering to visualize heat map for events in R & Tableau. </p>
 				</div>
 				<div class="clearfix"> </div>
@@ -135,7 +141,7 @@
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
 					<h5> Data Analyst Intern | Heart In Diamond <span class="glyphicon glyphicon-briefcase"> </span></h5>
-					<p>Conducted data collection, cleaning, mapping and visualization for 30+ consumers in Jiangsu & Zhejiang.</p><p>Performed market research of memorial-diamond industry in China and built predictive models in R to analyze and predict the growth of potential consumers in different regions of China.</p><p>Assisted in CRM, SEO, marketing and logistics in optimizing costs & benefits.  </p>
+					<p>Conducted data collection, cleaning, mapping and visualization for 30+ consumers in Jiangsu & Zhejiang. Performed market research of memorial-diamond industry in China and built predictive models in R to analyze and predict the growth of potential consumers in different regions of China. Assisted in CRM, SEO, marketing and logistics in optimizing costs & benefits.  </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -145,7 +151,7 @@
 				</div>
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"> </span> Marketing Analyst Intern | Liebherr Group</h5>
-					<p>Collected Clients’ financial accounts and company employees’ expense reports over 10 years.</p><p>Negotiated in after-sales product promotion strategies from customer data to predict future trend from logistic regression models and significance level analysis. </p><p>Drafted marketing plans and presented to the managers with the analysis report </p>
+					<p>Collected Clients’ financial accounts and company employees’ expense reports over 10 years. Negotiated in after-sales product promotion strategies from customer data to predict future trend from logistic regression models and significance level analysis. Drafted marketing plans and presented to the managers with the analysis report </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -155,7 +161,7 @@
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
 					<h5> Business Analyst Intern | China Merchants Bank <span class="glyphicon glyphicon-briefcase"></span> </h5>
-					<p>Made proposals in the Merchants credit card promotion in small and median sized companies and merchants in the city.</p><p>Assisted with the launch of the new Volunteer credit cards campaign, made promotion strategies and held promotion events among the China College Entrepreneurship Group and city-based Volunteer Association. </p><p>Gathered data from CMB mobile app in conducting user experience analysis from the #clicks of features, daily visits time periods, etc. to generate graphs in Excel and reported in PPT to managers. </p><p>Conducted channel promotions in sending out updates in apps and gathered feedback.  </p>
+					<p>Made proposals in the Merchants credit card promotion in small and median sized companies and merchants in the city. Assisted with the launch of the new Volunteer credit cards campaign, made promotion strategies and held promotion events among the China College Entrepreneurship Group and city-based Volunteer Association. Gathered data from CMB mobile app in conducting user experience analysis from the #clicks of features, daily visits time periods, etc. to generate graphs in Excel and reported in PPT to managers. Conducted channel promotions in sending out updates in apps and gathered feedback.  </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -245,7 +251,7 @@
 					</div>
 					<h6>SQL <span> 85% </span></h6>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 70%">
+						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
 					<h6>R<span>90% </span></h6>
@@ -255,7 +261,7 @@
 					</div>
 					<h6>Python <span> 85% </span></h6>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 75%">
+						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
 				</div>
@@ -267,17 +273,17 @@
 					</div>
 					<h6>Data Visualization<span> 90% </span></h6>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 95%">
+						<div class="progress-bar progress-bar-striped active" style="width: 90%">
 						</div>
 					</div>
-					<h6>UX DEVELOPER<span>80% </span></h6>
+					<h6>noSQL <span>70% </span></h6>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" style="width: 70%">
+						</div>
+					</div>
+					<h6>Communications<span> 80% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
-						</div>
-					</div>
-					<h6>PHP DESIGN<span> 60% </span></h6>
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 60%">
 						</div>
 					</div>
 				</div>
