--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<li>
 							<ul class="address-text">
 								<li><b>Basic </b></li>
-								<li>Grad @ CMU</a></li>
+								<li>Grad @ CMU | Proactively looking for FT position</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -89,7 +89,6 @@
 						<li><a href="#education" class="scroll">Education</a></li>
 						<li><a href="#skills" class="scroll">Skills</a></li>
 						<li><a href="#projects" class="scroll">My Projects</a></li>
-						<li><a href="#contact" class="scroll">Contact</a></li>
 					</ul>
 					<div class="clearfix"> </div>
 				</div>
@@ -130,7 +129,7 @@
 					<h4>2016.6 - 2016.8 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern  | Gridwise</h5>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Data Science Intern  | <a href="gridwise.io">Gridwise</a></h5>
 					<p>Cleaned and preprocessed 10 million+ Uber and Taxi data based in Pittsburgh and NYC, wrote SQL queries in postreSQL in retrieving data from the cloud (AWS) and created a local database. Built predictive models from selected features (time, location, events etc.) and generated scores from several classification and regression models: Linear, Ridge & Lasso Regression, SVM, Neural Networks, Decision Trees, Random Forest. Did cross-validation from training & testing datasets and used clustering to visualize heat map for events in R & Tableau. </p>
 				</div>
 				<div class="clearfix"> </div>
@@ -300,9 +299,9 @@
 				<div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
 					<ul class="resp-tabs-list wow fadeInUp animated" data-wow-delay=".7s">
 						<li class="resp-tab-item"><span>All</span></li>
-						<li class="resp-tab-item"><span>Html</span></li>
-						<li class="resp-tab-item"><span> Photoshop</span></li>
-						<li class="resp-tab-item"><span>Wordpress</span></li>					
+						<li class="resp-tab-item"><span>Software</span></li>
+						<li class="resp-tab-item"><span>Data</span></li>
+						<li class="resp-tab-item"><span>FinTech</span></li>					
 					</ul>	
 					<div class="clearfix"> </div>	
 					<div class="resp-tabs-container">
